// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown heading 1`] = `
<div>
  <div
    class="tailchat-markdown"
  >
    <h1>
      Heading1
    </h1>
    

    <h2>
      Heading2
    </h2>
    

    <h3>
      Heading3
    </h3>
    

    <h4>
      Heading4
    </h4>
    

    <h5>
      Heading5
    </h5>
  </div>
</div>
`;

exports[`Markdown link with baseUrl 1`] = `
<div>
  <div
    class="tailchat-markdown"
  >
    <p>
      <a
        href="https://tailchat.msgbyte.com/"
        target="_blank"
      >
        https://tailchat.msgbyte.com/
      </a>
      

      <a
        href="https://tailchat.msgbyte.com/README.md"
        target="_blank"
      >
        ./README.md
      </a>
      

      <div
        class="ant-image"
      >
        <img
          class="ant-image-img"
          loading="lazy"
          src="https://tailchat.msgbyte.com/demo.jpg"
        />
        <div
          class="ant-image-mask"
        >
          <div
            class="ant-image-mask-info"
          >
            <span
              aria-label="eye"
              class="anticon anticon-eye"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="eye"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                />
              </svg>
            </span>
            Preview
          </div>
        </div>
      </div>
    </p>
  </div>
</div>
`;

exports[`Markdown link without baseUrl 1`] = `
<div>
  <div
    class="tailchat-markdown"
  >
    <p>
      <a
        href="https://tailchat.msgbyte.com/"
        target="_blank"
      >
        https://tailchat.msgbyte.com/
      </a>
      

      <a
        href="./README.md"
        target="_blank"
      >
        ./README.md
      </a>
      

      <div
        class="ant-image"
      >
        <img
          class="ant-image-img"
          loading="lazy"
          src="./demo.jpg"
        />
        <div
          class="ant-image-mask"
        >
          <div
            class="ant-image-mask-info"
          >
            <span
              aria-label="eye"
              class="anticon anticon-eye"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="eye"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                />
              </svg>
            </span>
            Preview
          </div>
        </div>
      </div>
    </p>
  </div>
</div>
`;

exports[`Markdown list 1`] = `
<div>
  <div
    class="tailchat-markdown"
  >
    <ul>
      

      <li>
        1
      </li>
      

      <li>
        2
      </li>
      

      <li>
        3

        <ul>
          

          <li>
            4
          </li>
          

          <li>
            5

            <ul>
              

              <li>
                6
              </li>
              

            </ul>
            

          </li>
          

        </ul>
        

      </li>
      

    </ul>
  </div>
</div>
`;

exports[`Markdown table 1`] = `
<div>
  <div
    class="tailchat-markdown"
  >
    

















    <table>
      <thead>
        <tr>
          <th>
            A
          </th>
          <th>
            B
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            3
          </td>
          <td>
            4
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
